fix(style.css): reduce h6 font size
The h6 size was still too large for mobile devices so it
has been reduced accordingly.

--- a/assets/style.css
+++ b/assets/style.css
@@ -34,7 +34,7 @@ font-size: 24px;
 }
 
 h6 {
-font-size: 0.75em;
+font-size: 0.7em;
 }
 
 p {
